# json-rpc-server

./: README.md  json-rpc-server.cabal
Data/Network/: JsonRpcServer.hs
src-exe/: server.hs
