name:                json-server
version:             0.1.0.0
synopsis:            Simple HTTP server handling json-rpc requests
license-file:        LICENSE
author:              BMK
maintainer:          bmktuwien@gmail.com
category:            Data, Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Network.JsonRpcServer


  build-depends:       base                 >=4.7  && <4.8,
                       bytestring           >=0.10 && <0.11,
                       aeson                >=0.9  && <1.0,
                       http-types           >=0.8  && <0.9,
                       text                 >=1.2  && <1.3,
                       wai                  >=3.0  && <3.1,
                       wai-app-static       >=3.1  && <3.2,
                       unordered-containers >=0.2  && <0.3

  ghc-options:         -Wall -Werror

  default-language:    Haskell2010
