name:                json-rpc-server
version:             0.1.0.0
synopsis:            Simple HTTP server handling json-rpc requests
license-file:        LICENSE
author:              BMK
maintainer:          bmktuwien@gmail.com
category:            Data, Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Network.JsonRpcServer


  build-depends:       base                 >=4.7  && <4.8,
                       bytestring           >=0.10 && <0.11,
                       aeson                >=0.9  && <1.0,
                       http-types           >=0.8  && <0.9,
                       hslogger             >=1.2  && <1.3,
                       text                 >=1.2  && <1.3,
                       time                 >=1.5  && <1.6,
                       wai                  >=3.0  && <3.1,
                       wai-app-static       >=3.1  && <3.2,
                       warp                 >=3.0  && <3.1,
                       unordered-containers >=0.2  && <0.3

  ghc-options:         -Wall

  default-language:    Haskell2010


executable server
  default-language:    Haskell2010
  hs-source-dirs:      src-exe
  main-is:             server.hs
  ghc-options:         -Wall -rtsopts -threaded

  build-depends:       base                 >=4.7  && <4.8,
                       hslogger             >=1.2  && <1.3,
                       json-rpc-server
